fixed stacking order. Code blocks were overlapping control strip

--- a/_sass/_controlstrip.scss
+++ b/_sass/_controlstrip.scss
@@ -11,7 +11,7 @@ $strip-height: 120px;
 
 .site-header {
 	position: fixed;
-	z-index: 0;
+	z-index: 1;
 	top: 0;
 	left: 0;
 	right: 0;
