--- a/assets/css/prism.DarkDev.css
+++ b/assets/css/prism.DarkDev.css
@@ -45,7 +45,7 @@ pre[class*="language-"],
 
 /* Code blocks */
 pre[class*="language-"] {
-	position: relative;
+	/*position: relative;*/
 	padding: 1em;
 	margin: .5em 0;
 	overflow: scroll;
